# computer-club

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
files_for_main_task/: data2.txt  data3.txt  data4.txt  data6.txt
files_for_tests/right_input_format/: test1.txt  test10_desk1_10.txt  test11_desk1_20.txt  test2.txt  test3.txt  test4.txt  test6.txt  test7.txt  test8_desk1_108.txt
files_for_tests/wrong_input_format/: test1_wrong_data_extra_arg_id_3.txt  test2_wrong_data_hourly_rate_incorrect.txt  test3_wrong_data_extra_arg_id_2.txt  test4_wrong_data_desks_num_negative.txt  test5_wrong_data_missing_arg_id_4.txt  test6_wrong_data_unknown_id.txt
include/: default_data_structures.hpp  header_club_manager.hpp  header_path_manager.hpp  parser_logic.hpp
source/: main.cpp
source_realizations/: club_manager_def.cpp  parser_logic_def.cpp  path_manager_def.cpp
source_tests/: tests.cpp  tests_main.cpp
